# avis

./: .gitignore  .gitmodules  Cargo.toml  README.md  points.json  words.json
src/: errors.rs  feature.rs  jiggle.rs  lib.rs  main.rs  meshutil.rs  people.rs  scatterplot.rs  theater.rs  usmap.rs  util.rs  wordcloud.rs
src/frontend/: index.html
src/frontend/static/: card-deck.css  index.css  index.js  nav.css
src/visuals/: mod.rs  reliefmap.rs  storesim.rs  wordcloud.rs
