[package]
name = "avis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy_rapier3d = { version = "*", features=["simd-stable"]}
bevy_text_mesh = "0.1"
anyhow = "1.0"
rusqlite = "0.26"
r2d2 = "0.8"
r2d2_sqlite = "0.19"
rand = "0.8"
clap = {version="3", features=["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = {version = "*", features=["sync"]}
serde = "1.0"
serde_json = "*"
fasthash = "*"
lazy_static = "*"